// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oneOf operator support renders empty 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__request__wrapper">

<div class="openapi__request" style="--method: var(--dc-openapi-methods-post)">

POST {.openapi__method}


\`\`\`
http://localhost:8080/test
\`\`\`


</div>

</div>

Generated server url{.openapi__request__description}

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 ...rest 
|
 oneOf 
|
 [Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


### Dog

Dog class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 baz 
|
 string 
|
 
 
|||#

### Cat

Cat class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 foo 
|
 string 
|
 
 
|||#

## Responses

<div class="openapi__response__code__200">

## 200 OK

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 ...rest 
|
 oneOf 
|
 Base 200 response
[Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`oneOf operator support renders filled 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__request__wrapper">

<div class="openapi__request" style="--method: var(--dc-openapi-methods-post)">

POST {.openapi__method}


\`\`\`
http://localhost:8080/test
\`\`\`


</div>

</div>

Generated server url{.openapi__request__description}

### Body

{% cut "application/json" %}


\`\`\`json
{
    "name": "string",
    "age": 0
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 name 
|
 string 
|
 
 
||

||
 age 
|
 number 
|
 
 
||

||
 ...rest 
|
 oneOf 
|
 [Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


### Dog

Dog class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 baz 
|
 string 
|
 
 
|||#

### Cat

Cat class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 foo 
|
 string 
|
 
 
|||#

## Responses

<div class="openapi__response__code__200">

## 200 OK

### Body

{% cut "application/json" %}


\`\`\`json
{
    "name": "string",
    "age": 0
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 name 
|
 string 
|
 
 
||

||
 age 
|
 number 
|
 
 
||

||
 ...rest 
|
 oneOf 
|
 Base 200 response
[Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`oneOf operator support renders parameter 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__request__wrapper">

<div class="openapi__request" style="--method: var(--dc-openapi-methods-post)">

POST {.openapi__method}


\`\`\`
http://localhost:8080/test
\`\`\`


</div>

</div>

Generated server url{.openapi__request__description}

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "baz": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 pet 
|
 [Dog](#dog) 
or [Cat](#cat) 
|
 
 
||

||
 ...rest 
|
 oneOf 
|
 [Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


### Dog

Dog class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 baz 
|
 string 
|
 
 
|||#

### Cat

Cat class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 foo 
|
 string 
|
 
 
|||#

## Responses

<div class="openapi__response__code__200">

## 200 OK

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "baz": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 pet 
|
 [Dog](#dog) 
or [Cat](#cat) 
|
 
 
||

||
 ...rest 
|
 oneOf 
|
 Base 200 response
[Dog](#dog) 
or [Cat](#cat) 
|||#
#### Or value from:


</div>
<!-- markdownlint-disable-file -->

</div>"
`;
